--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.37.1
+streamlit==1.39.0
 langchain==0.1.8
 langchain-community==0.0.21
 langchain-core==0.1.24
@@ -6,4 +6,4 @@ mysql-connector-python==8.3.0
 groq==0.4.2
 langchain-groq==0.0.1
 pip==24.2
-python-dotenv=1.0.1
+python-dotenv
